# soprano-rs

./: .env.example  .gitignore  Cargo.toml  DEBUGGING_JOURNEY.md  FIXES_SUMMARY.md  FLASH_ATTENTION_SUMMARY.md  LICENSE  README.md
.github/workflows/: release.yml
benches/: tts_benchmark.rs
examples/: debug_comparison.rs  generate_samples.rs  simple_tts.rs  test_embedding.rs  test_forward.rs  test_mlp.rs  test_python_backend.rs  test_rmsnorm.rs  ws_client.rs
src/: chunker.rs  cli_style.rs  config.rs  decoder.rs  device_detection.rs  lib.rs  main.rs  model.rs  model_loader.rs  normalization.rs  protocol.rs  python_backend.rs  qwen3.rs  server.rs  spectral.rs  splitter.rs  tts.rs
tests/: decoder_weight_loading.rs  e2e_tests.rs  integration_tests.rs  mlp_comparison.rs
tests/common/: mod.rs
tests/fixtures/: sample_text.txt
